app/blog/src/styles/base.css
@import "tailwindcss";
@plugin "tailwindcss-animated";
@plugin "@tailwindcss/typography";

@import "./colors.css";
@import "./icons.css";

@theme {
  --color-portage-50: oklch(97.78% 0.0108 var(--primary-hue));
  --color-portage-100: oklch(93.56% 0.0321 var(--primary-hue));
  --color-portage-200: oklch(88.11% 0.0609 var(--primary-hue));
  --color-portage-300: oklch(82.67% 0.0908 var(--primary-hue));
  --color-portage-400: oklch(74.22% 0.1398 var(--primary-hue));
  --color-portage-500: oklch(64.78% 0.1472 var(--primary-hue));
  --color-portage-600: oklch(57.33% 0.1299 var(--primary-hue));
  --color-portage-700: oklch(46.89% 0.1067 var(--primary-hue));
  --color-portage-800: oklch(39.44% 0.0898 var(--primary-hue));
  --color-portage-900: oklch(32% 0.0726 var(--primary-hue));
  --color-portage-950: oklch(23.78% 0.054 var(--primary-hue));

  --color-content-50: var(--content-50);
  --color-content-100: var(--content-100);
  --color-content-200: var(--content-200);
  --color-content-primary: var(--content-primary);

  --color-primary: var(--primary);

  --color-content: var(--content-100);
  --color-heading: var(--content-200);
  --color-comment: var(--content-50);

  --border-color-container: var(--container-border);
  --border-color-container-light: var(--container-light-border);

  --radius-card: 0.75rem;
}

@utility center {
  align-items: center;
  justify-content: center;
}

@utility shape-card {
  border-radius: var(--radius-card);
  box-shadow: var(--shadow-lg);
}

@utility main-container {
  @apply mx-auto box-border w-screen max-w-screen border-container sm:w-[calc(100vw-100px)] sm:border-x xl:w-[1120px];
}

@utility post-list-padding {
  @apply px-6 @xl:px-10 @4xl:px-16 @6xl:px-32;
}

@utility bg-grid {
  background-image:
    linear-gradient(
      to right,
      var(--container-light-border) 1px,
      transparent 1px
    ),
    linear-gradient(
      to bottom,
      var(--container-light-border) 1px,
      transparent 1px
    );
  background-size: 14px 14px;
  background-position: -1px -1px;
  box-sizing: border-box;
}

@utility bg-bg {
  background-color: white;
  @variant dark {
    background-color: var(--color-gray-900);
  }
}

@utility card-btn {
  @apply transition-colors hover:bg-gray-200 dark:hover:bg-gray-800;
}

.copy-code {
  @apply /* btn-regular !TODO */ absolute top-1 right-1 !rounded-lg px-2 py-1 text-xs;
}

.prose {
  /* max-width: unset; */
  :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
    text-decoration: none;
    border-bottom: 2px solid --alpha(var(--color-gray-900) / 0.4);
    transition: all 0.15s ease-in-out;
    &:hover {
      color: var(--content-primary);
      border-bottom: 2px solid --alpha(var(--color-gray-900) / 0.6);
    }
    &:active {
      border-bottom: 2px solid --alpha(var(--color-gray-900) / 0.8);
    }
    & > img {
      margin-top: --spacing(2) !important;
      margin-bottom: --spacing(2) !important;
    }
  }
  *:not(pre) > code {
    white-space: pre-wrap;
    word-break: break-word;
  }
  blockquote {
    font-weight: inherit;
    font-style: normal;
    p {
      &:first-of-type::before {
        content: none;
      }
      &:last-of-type::after {
        content: none;
      }
    }
  }
}

.prose-invert {
  :where(a):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
    border-bottom: 2px solid --alpha(var(--color-gray-100) / 0.5);
    &:hover {
      border-bottom: 2px solid --alpha(var(--color-gray-100) / 0.6);
    }
    &:active {
      border-bottom: 2px solid --alpha(var(--color-gray-100) / 0.8);
    }
  }
}

:root {
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
  @apply scroll-smooth font-normal;

  --ease-in-quad: cubic-bezier(0.55, 0.085, 0.68, 0.53);
  --ease-in-cubic: cubic-bezier(0.55, 0.055, 0.675, 0.19);
  --ease-in-quart: cubic-bezier(0.895, 0.03, 0.685, 0.22);
  --ease-in-quint: cubic-bezier(0.755, 0.05, 0.855, 0.06);
  --ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
  --ease-in-circ: cubic-bezier(0.6, 0.04, 0.98, 0.335);

  --ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
  --ease-out-cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
  --ease-out-quart: cubic-bezier(0.165, 0.84, 0.44, 1);
  --ease-out-quint: cubic-bezier(0.23, 1, 0.32, 1);
  --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
  --ease-out-circ: cubic-bezier(0.075, 0.82, 0.165, 1);

  --ease-in-out-quad: cubic-bezier(0.455, 0.03, 0.515, 0.955);
  --ease-in-out-cubic: cubic-bezier(0.645, 0.045, 0.355, 1);
  --ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
  --ease-in-out-quint: cubic-bezier(0.86, 0, 0.07, 1);
  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
  --ease-in-out-circ: cubic-bezier(0.785, 0.135, 0.15, 0.86);
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.toc-card[data-state="open"] {
  animation: fadeIn 150ms ease-out;
}

.toc-card[data-state="closed"] {
  animation: fadeOut 150ms ease-in;
}

